# smsforwarder-test-project

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TEST_STRATEGY.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: e2e.yml  python-tests.yml
docs/: ARCHITECTURE.md
reports/: junit.xml  report.html
scripts/: run_e2e.sh  start_mock_server.sh
tests/: README.md  conftest.py
tests/api_webhook/: test_fault_injection.py  test_mock_server_regression.py  test_no_retry_behavior.py  test_security_bounds.py  test_webhook_basic.py  test_webhook_concurrency.py  test_webhook_edge_cases.py  test_webhook_methods.py
tests/e2e_blackbox/: test_adb_sms_injection.py  test_e2e_no_retry.py
tests/performance/: bench_e2e_sms_throughput.py  bench_webhook_receiver.py  test_e2e_throughput_perf.py  test_webhook_receiver_perf.py
tests/unit/: test_adb_client.py  test_mock_server_utils.py  test_sms_injector.py  test_sms_injector_mac.py  test_trigger_utils.py
tests/utils/: api_client.py  http_payload.py  test_trigger_unit.py  trigger.py
tools/adb/: adb_client.py  sms_injector.py
tools/mock_server/: __init__.py  app.py
