[project]
name = "smsforwarder-test-project"
version = "0.1.0"
description = "Testing infrastructure for SmsForwarder — API contract, E2E black-box, performance benchmarks, and unit tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests",
  "pytest",
  "pytest-html",
  "fastapi",
  "uvicorn",
  "pydantic",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "e2e: end-to-end tests (require emulator and SmsForwarder)",
  "integration: integration tests (require mock server)",
  "performance: performance/benchmark tests",
  "manual: requires manual trigger (run with -m manual)",
]
